<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalendarTools</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_calendar">Select calendar</string>
    <string name="button_accept">Accept</string>
    <string name="button_search">Search</string>
    <string name="button_select_all">Select All</string>
    <string name="button_delete">Delete</string>
    <string name="button_refresh">Refresh</string>
    <string name="select_all">Select all</string>
    <string name="remove_selected">Remove selected</string>
    <string name="empty_string"></string>

</resources>
