<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$EventListFragment" 
    >
    
    <LinearLayout
        android:id="@+id/eventButtonsBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageButton
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_accept"
            android:src="@drawable/ic_action_accept" 
            />

        <ImageButton
            android:id="@+id/btnSearch"
            android:contentDescription="@string/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_search" 
            />

        <ImageButton
            android:id="@+id/btnSelectAll"
            android:contentDescription="@string/button_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_select_all" 
            />

        <ImageButton
            android:id="@+id/btnDelete"
            android:contentDescription="@string/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_delete" 
            />

        <ImageButton
            android:id="@+id/btnRefresh"
            android:contentDescription="@string/button_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_refresh" 
            />
    </LinearLayout>

    <ListView
        android:id="@+id/eventsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eventButtonsBar"
        android:layout_below="@+id/eventButtonsBar"
        android:layout_marginTop="@dimen/activity_vertical_margin" 
        />

 </RelativeLayout>